<resources>
    <string name="app_name">Ev4</string>

    <!-- strings.xml -->
    <string name="the_best_wa">El lugar mas seguro para tu dinero</string>
    <string name="crear_cuenta_nueva">Crear cuenta nueva</string>
    <string name="ya_tiene_cuenta">Ya tiene cuenta?</string>

    <string name="login_and_s">Logea y empieza a transferir!</string>
    <string name="email_text"> Email </string>
    <string name="pass_text"> Contraseña </string>
    <string name="olvidaste_contrasena">Olvidaste tu contraseña?</string>
    <string name="login_btn">Login</string>
    <string name="crear_una_nueva">Crear una nueva cuenta</string>
    <string name="signup_and"> Registrarse y empezar a transferir </string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="reingresar_contraseña">Reingresar contraseña</string>
    <string name="inicio">Inicio</string>
    <string name="hola">Hola Amanda!</string>
    <string name="balance_total">Balance total: </string>
    <string name="money">$124.53</string>
    <string name="enviar_dinero">Enviar Dinero</string>
    <string name="ingresar_dinero">Ingresar Dinero</string>
    <string name="ultimas_transacciones">Útimas Transacciones</string>
    <string name="name">Demo name </string>
    <string name="demo_fecha_hora">Demo hora y fecha</string>
    <string name="demo_precio">demo precio</string>
    <string name="no_hay_transacciones">No hay transacciones registradas!</string>
    <string name="ingreso_dinero">Ingresar Dinero</string>
    <string name="cantidad_ingresar">Cantidad a ingresar</string>
    <string name="notas_transferencia">Notas de transferencia</string>
    <string name="cantidad_transferir">Cantidad a transferir</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="name_profile">Demo Nombre</string>


</resources>